kubernetes/yamls/generator/generator-deployment.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: webapp-generator
  namespace: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp-generator
    spec:
      containers:
      - name: webapp-generator
        image: eventyay/webapp-generator:latest
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          timeoutSeconds: 1
        ports:
        - containerPort: 5000
          protocol: TCP
      restartPolicy: Always
