kubernetes/yamls/generator/generator-service.yml
kind: Service
apiVersion: v1
metadata:
  name: webapp-generator
  namespace: web
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: webapp-generator
