kubernetes/yamls/generator/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-generator
  namespace: web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - webgen.eventyay.com
    secretName: eventyay-webgen-tls
  rules:
  - host: webgen.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-generator
          servicePort: 5000
